# RSMF

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
assets/images/: .gitignore  rsmf.drawio
contracts/: Entity.sol  Fund.sol  Proposal.sol  RegionData.sol  Value.sol
src/: lib.rs
src/bcos/: cintf.rs  macros.rs  mod.rs  rintf.rs
src/contract/: mod.rs
