[package]
name = "rsmf"
version = "0.1.0"
edition = "2021"
description = "Residential Special Maintenance Fund (RSMF) - management tool - Administration frontend"

[lib]
name = "rsmf"

[dependencies]
alloy = { version = "0.5.3", features = ["full"] }
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
confy = "0.6.1"
lazy_static = "1.5.0"
libc = "0.2.161"
serde = { version = "1.0.152", features = ["derive"] }
