[package]
name = "rsmf"
version = "0.1.0"
edition = "2021"
description = "Residential Special Maintenance Fund (RSMF) - management tool - Administration frontend"

[lib]
name = "rsmf"
type = "dylib"

[dependencies]
alloy = { version = "0.5.3", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
confy = "0.6.1"
lazy_static = "1.5.0"
libc = "0.2.161"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
secp256k1 = { version = "0.30", features = ["rand", "hashes", "global-context", "serde"] }
rpassword = "7.3"
dirs = "5.0"
